# freak-in-the-sheets

./: .gitignore  DOCS.txt  README.md  build.sh  build_full.sh  newfile.c  newfile.ll  out-auto-poetry.sheet  out-auto.sheet  package.json  test.ll
demo/: main.c
src/: assembler.js  celly_vm.lua  code.c  fib.asm  fib.sheet  formula.lua  lexi_fib.asm  preview.lua  vm.lua
src/llvm-to-shasm/: .gitignore  AGENTS.md  README.md  pyproject.toml
src/llvm-to-shasm/.pytest_cache/v/cache/: nodeids
src/llvm-to-shasm/celly/: celly_assembler.js
src/llvm-to-shasm/llvm_to_shasm/: __init__.py  backend.py  cli.py  compiler.py
src/llvm-to-shasm/old-assembler/: preview.lua
src/llvm-to-shasm/tests/: test_backend.py  test_cli_options.py  test_pipeline.py  test_sheet_pipeline.py
src/llvm-to-shasm/tests/fixtures/: fib.c  fib.sheet  fib_fast.c  fib_fast.sheet  fib_recursive.c  sha256.c  sha256.sheet
