[tool.poetry]
name = "llvm-to-shasm"
version = "0.1.0"
description = "Compile a small LLVM IR subset into shasm."
authors = ["Thomas Breydo"]
readme = "README.md"
packages = [{ include = "llvm_to_shasm" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[tool.poetry.scripts]
llvm-to-shasm = "llvm_to_shasm.cli:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
